# popinn

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docs_reload.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yaml  docs.yml
docs/: index.md  quickstart.md
docs/_static/: mathjax.js
docs/api/: eval.md  loss.md  models.md  sampling.md  train.md
docs/api/abstract/: abstract_models.md  abstract_sampler.md  abstract_weights.md
docs/api/loss/: loss.md  residual.md  weights.md
docs/api/models/: DeepONet.md  P2INN.md  PINN.md
docs/api/train/: adam.md  lbfgs.md  train.md
docs/examples/: deeponet.ipynb  index.md  parametrized_pinn.ipynb  pinn.ipynb
docs/introduction/: anatomy.md  index.md  jax_eqx.md  physics_informed_learning.md
docs/stylesheets/: extra.css
src/popinn/: __init__.py  config.py  eval.py  loss.py  models.py  sampling.py  train.py  utils.py
src/popinn/network/: __init__.py  model.py  models.py  sampling.py  train.py  train_p2inn.py
src/popinn/physics/: __init__.py  contraint.py  loss.py  pde.py  phi.py  solution.py
src/popinn/utils/: __init__.py  io.py  plotting.py
tests/: conftest.py  test_01_models.py  test_02_eval.py  test_03_loss.py
